Fix navigation pos on mobile

--- a/src/components/modal/Modal.css
+++ b/src/components/modal/Modal.css
@@ -14,14 +14,17 @@
 #modal-container {
     background-color: rgba(25, 25, 25, 1);
     display: flex;
+    flex-direction: column;
     overflow: hidden;
     height: 100%;
+    width: 100%;
 }
 
 #modal-image-container {
+    flex-grow: 1;
     background-color: black;
     width: 90%;
-    height: 100%;
+    max-height: 80vh;
     display: flex;
     justify-content: center;
 }
@@ -39,12 +42,14 @@
     height: 100%;
 }
 
-.modal-row {
+.modal-content {
     width: 100%;
     height: 100%;
-    flex-direction: column-reverse;
-    align-items: center;
     display: flex;
+    flex-direction: column-reverse;
+    /* padding-top: 50px; */
+    align-items: center;
+    justify-self: start;
 }
 
 #navigation {
@@ -83,13 +88,12 @@
     margin-right: 10px;
 }
 
-#title-exit {
+#modal-header {
     font-size: 12px;
     justify-content: space-between;
-    margin-left: 10px;
-    margin-right: 10px;
     display: flex;
     align-items: center;
+    margin: 0px 10px;
 }
 
 #exit {
@@ -105,17 +109,18 @@
         flex-direction: column;
     }
 
-    .modal-row {
+    .modal-content {
         flex-direction: row;
-        align-items: default;
+        padding-top: 0;
     }
 
     #modal-image-container {
         width: 80%;
     }
 
-    #title-exit {
+    #modal-header {
         font-size: 15px;
+        margin: 0px 10px 10px 10px;
     }
 
     #modal-container {
